--- a/WalSmart/app/src/main/res/layout/activity_products.xml
+++ b/WalSmart/app/src/main/res/layout/activity_products.xml
@@ -27,18 +27,31 @@
         android:id="@+id/my_product_sets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/basket_btn_sets"
+        android:layout_above="@id/back_buttons"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
-
+<LinearLayout
+    android:id="@+id/back_buttons"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:gravity="center"
+    android:layout_marginBottom="@dimen/fab_margin"
+    android:layout_alignParentBottom="true">
     <Button
         android:id="@+id/basket_btn_sets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/fab_margin"
-        android:layout_alignParentBottom="true"
-        android:text="@string/basket"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:text="Basket"
         android:textSize="@dimen/btn_text" />
+    <Button
+        android:id="@+id/categories_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="categories"
+        android:textSize="@dimen/btn_text" />
+</LinearLayout>
+
 
 </RelativeLayout>
