--- a/WalSmart/app/src/main/res/layout/activity_basket.xml
+++ b/WalSmart/app/src/main/res/layout/activity_basket.xml
@@ -45,23 +45,37 @@
             android:text="@string/my_sets"
             android:textSize="@dimen/btn_text" />
     </LinearLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/checkout"
+    android:layout_alignParentBottom="true"
+    android:layout_margin="10dp"
+    android:layout_alignParentEnd="true"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
     <Button
         android:id="@+id/checkout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginHorizontal="@dimen/fab_margin"
         android:text="@string/checkout"
         android:textSize="@dimen/btn_text" />
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="@dimen/fab_margin"
+        android:textSize="23dp"
+        android:layout_height="wrap_content"
+        android:text="Total PLN: "/>
+</LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_basket"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/checkout_btn"
+        android:layout_above="@id/checkout"
         android:layout_below="@+id/buttons"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -72,7 +86,7 @@
         android:id="@+id/instruction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/checkout_btn"
+        android:layout_above="@id/checkout"
         android:layout_below="@+id/buttons"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
