--- a/WalSmart/app/src/main/res/layout/my_spinner.xml
+++ b/WalSmart/app/src/main/res/layout/my_spinner.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:textSize="25sp"
+    android:textStyle="bold"
     android:gravity="left"
     android:textColor="@color/black_coffee"
     android:padding="5dip"
