--- a/WalSmart/app/src/main/res/layout/activity_basket.xml
+++ b/WalSmart/app/src/main/res/layout/activity_basket.xml
@@ -22,53 +22,84 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/products_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/individual_products"
-            android:textSize="@dimen/btn_text" />
-
-        <Button
-            android:id="@+id/sets_btn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/prepared_sets"
-            android:textSize="@dimen/btn_text" />
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/products_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/individual_products"
+                android:textStyle="bold"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/handwritten_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="@string/handwritten_list"
+                android:textStyle="bold"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/sets_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/prepared_sets"
+                android:textStyle="bold"
+                android:textSize="14dp" />
+            <Button
+                android:id="@+id/my_sets"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:text="@string/my_sets"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/checkout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/my_sets"
+            android:id="@+id/checkout_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/my_sets"
+            android:layout_marginHorizontal="@dimen/fab_margin"
+            android:text="@string/checkout"
             android:textSize="@dimen/btn_text" />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:text="Total PLN: "
+            android:textSize="23dp" />
     </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/checkout"
-    android:layout_alignParentBottom="true"
-    android:layout_margin="10dp"
-    android:layout_alignParentEnd="true"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
-    <Button
-        android:id="@+id/checkout_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/fab_margin"
-        android:text="@string/checkout"
-        android:textSize="@dimen/btn_text" />
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/fab_margin"
-        android:textSize="23dp"
-        android:layout_height="wrap_content"
-        android:text="Total PLN: "/>
-</LinearLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
