--- a/WalSmart/app/src/main/res/layout/activity_handwritten_list.xml
+++ b/WalSmart/app/src/main/res/layout/activity_handwritten_list.xml
@@ -1,42 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/floral_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/floral_white"
 
     tools:context=".Product.ProductActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/toolbar_color" />
     <TextView
-        android:id="@+id/instruction"
-        android:layout_height="wrap_content"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:text="In a rush? Just snap a quick photo of your list and we will take care of the rest :)"
-        android:textSize="24sp"/>
+        android:layout_marginTop="@dimen/fab_margin"
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:textColor="@color/toolbar_color"
+        android:textStyle="bold"
+        android:text="In a rush?"
+        android:textSize="24sp" />
+    <TextView
+        android:id="@+id/instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:text="Just snap a photo of a list :)"
+        android:textSize="21sp" />
+    <LinearLayout
+        android:id="@+id/photo_btns"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instruction"
+        android:layout_alignParentEnd="true"
+        android:orientation="horizontal">
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/camera" />
     <Button
         android:id="@+id/cameraButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginHorizontal="@dimen/fab_margin"
-        android:layout_below="@+id/instruction"
-        android:text="Take a photo"
-        />
+        android:layout_margin="8dp"
+        android:text="Take a photo" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/set_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/add_to_basket"
-        android:layout_below="@+id/cameraButton"
+        android:layout_below="@+id/photo_btns"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
+
+    <VideoView
+        android:id="@+id/animation"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/add_to_basket"
+        android:layout_below="@+id/photo_btns"
+        android:layout_margin="@dimen/fab_margin" />
 
     <LinearLayout
         android:id="@+id/add_to_basket"
