--- a/WalSmart/app/src/main/res/layout/activity_create_set.xml
+++ b/WalSmart/app/src/main/res/layout/activity_create_set.xml
@@ -14,8 +14,8 @@
         android:background="@color/toolbar_color" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
         android:id="@+id/input"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:layout_margin="@dimen/fab_margin">
@@ -24,53 +24,40 @@
             android:id="@+id/set_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#2B2B2B"
             android:hint="Set name"
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@color/black_coffee" />
     </com.google.android.material.textfield.TextInputLayout>
-   <!-- <LinearLayout
-        android:id="@+id/photo_adding"
-        android:layout_width="match_parent"
-        android:layout_below="@id/input"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/attach_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/fab_margin"
-            android:text="Attach photo"/>
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-    </LinearLayout>-->
 
     <TextView
         android:id="@+id/info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/fab_margin"
         android:layout_below="@id/input"
-        android:textStyle="bold"
-        android:text="Search for products from different categories you want to add:"
-        android:textSize="18sp"/>
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:gravity="center"
+        android:text="Pick category and search for products by name"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <Spinner
         android:id="@+id/product_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/fab_margin"
         android:layout_below="@id/info"
-        android:spinnerMode="dialog"
-        android:layout_marginHorizontal="@dimen/fab_margin"/>
+        android:layout_marginHorizontal="@dimen/fab_margin"
+        android:layout_marginVertical="@dimen/fab_margin"
+        android:spinnerMode="dialog" />
+
     <SearchView
         android:id="@+id/search_product_set"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@id/product_spinner"
-        android:background="#25FF6F00"
         android:layout_marginHorizontal="@dimen/fab_margin"
+        android:background="#25FF6F00"
         android:clickable="true"
         android:focusable="true" />
 
