--- a/WalSmart/app/src/main/res/layout/activity_handwritten_list.xml
+++ b/WalSmart/app/src/main/res/layout/activity_handwritten_list.xml
@@ -12,17 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/toolbar_color" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginHorizontal="@dimen/fab_margin"
-        android:textColor="@color/toolbar_color"
-        android:textStyle="bold"
+        android:layout_marginTop="@dimen/fab_margin"
         android:text="In a rush?"
-        android:textSize="24sp" />
+        android:textColor="@color/toolbar_color"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/instruction"
         android:layout_width="wrap_content"
@@ -30,8 +32,9 @@
         android:layout_below="@+id/title"
         android:layout_marginHorizontal="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:text="Just snap a photo of a list :)"
+        android:text="Just snap a photo of a list!"
         android:textSize="21sp" />
+
     <LinearLayout
         android:id="@+id/photo_btns"
         android:layout_width="wrap_content"
@@ -40,17 +43,18 @@
         android:layout_alignParentEnd="true"
         android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="8dp"
-        android:src="@drawable/camera" />
-    <Button
-        android:id="@+id/cameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="Take a photo" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/camera" />
+
+        <Button
+            android:id="@+id/cameraButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Take a photo" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -66,9 +70,9 @@
         android:id="@+id/animation"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@+id/add_to_basket"
         android:layout_below="@+id/photo_btns"
+        android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/fab_margin" />
 
     <LinearLayout
