--- a/WalSmart/app/src/main/res/layout/activity_order.xml
+++ b/WalSmart/app/src/main/res/layout/activity_order.xml
@@ -5,48 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/floral_white"
-    tools:context=".Order.OrderActivity"
-    >
+    tools:context=".Order.OrderActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/toolbar_color" />
+
     <TextView
         android:id="@+id/choose_city"
         android:layout_width="250dp"
-        android:layout_below="@id/toolbar"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_below="@id/toolbar"
         android:layout_marginStart="@dimen/fab_margin"
+        android:layout_marginTop="50dp"
         android:text="@string/choose_city"
-        android:textStyle="bold"
         android:textColor="@color/toolbar_color"
         android:textSize="25sp"
-        />
+        android:textStyle="bold" />
 
     <Spinner
         android:id="@+id/cities_spinner"
         style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/fab_margin"
         android:layout_below="@id/choose_city"
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_marginBottom="80dp"
-        android:spinnerMode="dialog"
-        />
+        android:spinnerMode="dialog" />
 
     <TextView
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/fab_margin"
         android:layout_above="@id/shops_spinner"
+        android:layout_marginStart="@dimen/fab_margin"
         android:text="@string/choose_shop"
-        android:textStyle="bold"
         android:textColor="@color/toolbar_color"
         android:textSize="25sp"
-        />
+        android:textStyle="bold" />
 
     <Spinner
         android:id="@+id/shops_spinner"
@@ -60,25 +57,25 @@
         android:spinnerMode="dialog" />
 
     <TextView
-        android:layout_marginStart="@dimen/fab_margin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/editTextPhone"
+        android:layout_marginStart="@dimen/fab_margin"
         android:text="@string/phone_number"
-        android:textStyle="bold"
         android:textColor="@color/toolbar_color"
         android:textSize="25sp"
-        />
+        android:textStyle="bold" />
 
     <EditText
-        android:layout_marginStart="@dimen/fab_margin"
         android:id="@+id/editTextPhone"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/shops_spinner"
+        android:layout_marginStart="@dimen/fab_margin"
         android:ems="10"
         android:inputType="phone"
         android:textSize="20sp" />
+
     <LinearLayout
         android:id="@+id/price_layout"
         android:layout_width="wrap_content"
@@ -87,11 +84,12 @@
         android:layout_alignParentEnd="true"
 
         android:orientation="horizontal">
+
         <ImageView
             android:layout_width="50dp"
-            android:layout_gravity="center"
             android:layout_height="50dp"
-            android:src="@drawable/piggy"/>
+            android:layout_gravity="center"
+            android:src="@drawable/piggy" />
 
         <TextView
             android:id="@+id/priceTextView"
@@ -108,12 +106,11 @@
         android:id="@+id/back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/fab_margin"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
         android:text="@string/back"
-        android:textSize="@dimen/btn_text"
-        />
+        android:textSize="@dimen/btn_text" />
 
     <Button
         android:id="@+id/submit_btn"
@@ -125,8 +122,6 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:text="@string/submit_order"
         android:textSize="@dimen/btn_text"
-
         />
-
 
 </RelativeLayout>
