--- a/WalSmart/app/src/main/res/layout/activity_product_sets.xml
+++ b/WalSmart/app/src/main/res/layout/activity_product_sets.xml
@@ -3,55 +3,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/floral_white"
     android:layout_height="match_parent"
+    android:background="@color/floral_white"
     tools:context=".ProductSet.ProductSetActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/toolbar_color" >
-    </androidx.appcompat.widget.Toolbar>
+        android:background="@color/toolbar_color"/>
+
     <SearchView
         android:id="@+id/search_product_set"
-        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
-        android:background="#25FF6F00"
-        android:layout_margin="@dimen/fab_margin"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:layout_margin="@dimen/fab_margin"
+        android:background="#25FF6F00"
         android:clickable="true"
         android:focusable="true" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/search_product_set"
         android:id="@+id/my_product_sets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/buttons2"
+        android:layout_below="@+id/search_product_set"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
-<LinearLayout
-    android:id="@+id/buttons2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_centerInParent="true"
-    android:layout_alignParentBottom="true"
-    android:orientation="horizontal">
-    <Button
-        android:id="@+id/create_set"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/buttons2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:layout_margin="@dimen/fab_margin"
-        android:text="Create set"
-        android:textSize="@dimen/btn_text" />
-    <Button
-        android:id="@+id/basket_btn_sets"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-          android:layout_margin="@dimen/fab_margin"
-        android:text="@string/basket"
-        android:textSize="@dimen/btn_text" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/create_set"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:text="Create set"
+            android:textSize="@dimen/btn_text" />
+
+        <Button
+            android:id="@+id/basket_btn_sets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:text="@string/basket"
+            android:textSize="@dimen/btn_text" />
+    </LinearLayout>
 
 </RelativeLayout>
