--- a/WalSmart/app/src/main/res/layout/activity_products.xml
+++ b/WalSmart/app/src/main/res/layout/activity_products.xml
@@ -2,56 +2,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/floral_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/floral_white"
     tools:context=".Product.ProductActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/toolbar_color" >
-    </androidx.appcompat.widget.Toolbar>
+        android:background="@color/toolbar_color"></androidx.appcompat.widget.Toolbar>
+
     <SearchView
         android:id="@+id/search_product_set"
         android:layout_width="match_parent"
-        android:layout_below="@id/toolbar"
         android:layout_height="wrap_content"
-        android:background="#25FF6F00"
+        android:layout_below="@id/toolbar"
         android:layout_margin="@dimen/fab_margin"
+        android:background="#25FF6F00"
         android:clickable="true"
         android:focusable="true" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/search_product_set"
         android:id="@+id/my_product_sets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/back_buttons"
+        android:layout_below="@+id/search_product_set"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
-<LinearLayout
-    android:id="@+id/back_buttons"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:gravity="center"
-    android:layout_marginBottom="@dimen/fab_margin"
-    android:layout_alignParentBottom="true">
-    <Button
-        android:id="@+id/basket_btn_sets"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/back_buttons"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:text="Basket"
-        android:textSize="@dimen/btn_text" />
-    <Button
-        android:id="@+id/categories_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="categories"
-        android:textSize="@dimen/btn_text" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/basket_btn_sets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/fab_margin"
+            android:text="Basket"
+            android:textSize="@dimen/btn_text" />
+
+        <Button
+            android:id="@+id/categories_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="categories"
+            android:textSize="@dimen/btn_text" />
+    </LinearLayout>
 
 
 </RelativeLayout>
