--- a/WalSmart/app/src/main/res/layout/my_spinner.xml
+++ b/WalSmart/app/src/main/res/layout/my_spinner.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="left"
+    android:padding="5dip"
+    android:textColor="@color/black_coffee"
     android:textSize="25sp"
     android:textStyle="bold"
-    android:gravity="left"
-    android:textColor="@color/black_coffee"
-    android:padding="5dip"
     tools:ignore="RtlHardcoded" />
