--- a/WalSmart/app/src/main/res/layout/order_date.xml
+++ b/WalSmart/app/src/main/res/layout/order_date.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/fab_margin"
         android:layout_marginTop="40dp"
+        android:background="#F6EFE3"
         android:hint="pick up date"
         android:textSize="40sp" />
 
@@ -39,8 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:textSize="@dimen/btn_text"
-        android:text="Change" />
+        android:text="Change"
+        android:textSize="@dimen/btn_text" />
 
     <TextView
         android:id="@+id/time"
@@ -48,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/fab_margin"
         android:layout_marginTop="40dp"
+        android:background="#F6EFE3"
         android:hint="pick up time"
         android:textSize="40sp" />
 
@@ -56,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:textSize="@dimen/btn_text"
-        android:text="Change" />
+        android:text="Change"
+        android:textSize="@dimen/btn_text" />
 
     <Button
         android:id="@+id/date_time_set"
@@ -66,7 +68,7 @@
         android:layout_gravity="end"
         android:layout_marginHorizontal="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:textSize="@dimen/btn_text"
-        android:text="Set" />
+        android:text="Set"
+        android:textSize="@dimen/btn_text" />
 
 </LinearLayout>
