--- a/WalSmart/app/src/main/res/layout/popup_slot_machine.xml
+++ b/WalSmart/app/src/main/res/layout/popup_slot_machine.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/slate_grey"
+    android:gravity="center"
     android:padding="@dimen/fab_margin">
 
     <androidx.cardview.widget.CardView
@@ -16,38 +16,42 @@
             android:background="@color/floral_white"
             android:orientation="vertical"
             android:padding="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/casino"/>
+                    android:src="@drawable/casino" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:text="In a mood for a little gamble?"
                     android:textSize="23sp"
-                    android:layout_margin="8dp"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_margin="4dp"
                 android:text="Jackpot: 20% off on your order!\nLoss: 2% price increase on your order."
-                android:textSize="18sp"
-                android:layout_margin="4dp"/>
+                android:textSize="18sp" />
+
             <VideoView
                 android:id="@+id/animation"
                 android:layout_width="300dp"
-                android:layout_gravity="center"
                 android:layout_height="400dp"
-                android:layout_marginBottom="@dimen/fab_margin"/>
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/fab_margin" />
 
 
             <LinearLayout
@@ -57,6 +61,7 @@
                 android:layout_gravity="center"
                 android:background="@color/floral_white"
                 android:orientation="horizontal">
+
                 <Button
                     android:id="@+id/no_btn"
                     android:layout_width="wrap_content"
@@ -65,6 +70,7 @@
                     android:backgroundTint="#F4EEE2"
                     android:text="No, thanks"
                     android:textSize="@dimen/btn_text" />
+
                 <Button
                     android:id="@+id/yes_btn"
                     android:layout_width="wrap_content"
