--- a/WalSmart/app/src/main/res/layout/product_design.xml
+++ b/WalSmart/app/src/main/res/layout/product_design.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/floral_white"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    android:background="@color/floral_white">
 
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:padding="5dp"
         android:background="@drawable/boarder"
+        android:padding="5dp"
         android:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
@@ -32,9 +32,10 @@
             android:id="@+id/product_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price"
             android:layout_marginHorizontal="@dimen/fab_margin"
+            android:text="Price"
             android:textSize="20sp" />
+
         <TextView
             android:id="@+id/product_size"
             android:layout_width="wrap_content"
