--- a/WalSmart/app/src/main/res/layout/product_set_design.xml
+++ b/WalSmart/app/src/main/res/layout/product_set_design.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/floral_white"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:background="@color/floral_white">
 
     <LinearLayout
         android:layout_width="180dp"
@@ -61,12 +61,13 @@
             android:layout_height="30dp"
             android:layout_marginStart="@dimen/fab_margin"
             android:foreground="@drawable/selector_plus" />
+
         <ImageButton
             android:id="@+id/cancel_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="40dp"
-            android:foreground="@drawable/selector_cancel"/>
+            android:foreground="@drawable/selector_cancel" />
     </LinearLayout>
 
 
